Added fetch team names
